# spotify-py-sdk

./: .gitignore  LEARN.md  README.md  example.py  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
docs/: conf.py  index.rst  src.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.auth.doctree  (+5 more)
spotify_py_sdk/: __init__.py  types.py
spotify_py_sdk/endpoints/: __init__.py  albums.py  artists.py  audiobooks.py  browse.py  chapters.py  current_user.py  endpoints_base.py  episodes.py  markets.py  player.py  playlists.py  recommendations.py  search.py  shows.py  tracks.py  users.py
src/: spotify_api.py  types.py
src/auth/: access_token_manager.py
src/docs/: conf.py  index.rst
src/endpoints/: __init__.py  albums.py  artists.py  audiobooks.py  browse.py  chapters.py  current_user.py  endpoints_base.py  episodes.py  markets.py  player.py  playlists.py  recommendations.py  search.py  shows.py  tracks.py  users.py
tests/data/: valid_album_result.json  valid_album_tracks_result.json  valid_artist.json  valid_audiobook.json  valid_audiobook_chapters.json  valid_categories.json  valid_category.json  valid_chapter_api_response.json  valid_episode.json  valid_genres.json  valid_markets.json  valid_playlist.json  valid_show.json  valid_track.json  valid_user.json
tests/endpoints/: test_albums.py  test_artists.py  test_audiobooks.py  test_browse.py  test_chapters.py  test_endpoints_base.py  test_episodes.py  test_markets.py  test_playlists.py  test_recommendations.py  test_search.py  test_shows.py  test_tracks.py  test_users.py
(+77 files in other folders)
