[tool.poetry]
name = "spotify-py-sdk"
version = "0.1.0"
description = "Python SDK for Spotify"
authors = ["Ananya Nayak <ananyanayak102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
